[package]
name = "detours-sys"
version = "0.1.0"
authors = ["Diana <5275194+DianaNites@users.noreply.github.com>"]
edition = "2018"
publish = false
links = "detours"

[dependencies]

[dev-dependencies.winapi]
version = "0.3.7"
features = [
    "synchapi",
    "processthreadsapi",
    "sysinfoapi",
]

[build-dependencies]
cc = "1.0.37"
bindgen = "0.49.0"
